--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "minimum-stability": "dev",
     "require": {
         "rmrevin/yii2-fontawesome": "~3.5",
+        "kartik-v/yii2-widget-select2": "@dev",
+        "kartik-v/yii2-widget-fileinput": "dev-master",        
         "yiisoft/yii2": "~2.0.14"
     },    
     "autoload": {
