--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "rmrevin/yii2-fontawesome": "~3.5",
         "kartik-v/yii2-widget-select2": "@dev",
         "kartik-v/yii2-widget-fileinput": "@dev",
-        "yiisoft/yii2": "~2.0.14"
+        "yiisoft/yii2": "~2.0.14",
+        "phpoffice/phpexcel": "v1.8.*",
+        "phpoffice/phpspreadsheet": "^1.21.*"
     },
     "autoload": {
         "psr-4": {
