--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
     "require": {
         "rmrevin/yii2-fontawesome": "~3.5",
         "kartik-v/yii2-widget-select2": "@dev",
-        "kartik-v/yii2-widget-fileinput": "@dev",
+        "kartik-v/yii2-widget-fileinput": "^1.1.1",
         "yiisoft/yii2": "~2.0.14",
         "phpoffice/phpexcel": "v1.8.*",
-        "phpoffice/phpspreadsheet": "^1.21.*"
+        "phpoffice/phpspreadsheet": "^1.23.0"
     },
     "autoload": {
         "psr-4": {
