--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "kartik-v/yii2-widget-fileinput": "^1.1.1",
         "yiisoft/yii2": "~2.0.14",
         "phpoffice/phpexcel": "v1.8.*",
+        "yiisoft/yii2-bootstrap5": "~2.0.2",
         "phpoffice/phpspreadsheet": "^1.23.0"
     },
     "autoload": {
