feat: Разработан модуль синхронизации

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "kartik-v/yii2-widget-fileinput": "^1.1.1",
         "yiisoft/yii2": "~2.0.14",
         "phpoffice/phpexcel": "v1.8.*",
-        "phpoffice/phpspreadsheet": "^1.23.0"
+        "phpoffice/phpspreadsheet": "^1.23.0",
+        "kartik-v/yii2-widget-datetimepicker": "dev-master"
     },
     "autoload": {
         "psr-4": {
