--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
     "license": "MIT",
     "require": {
         "rmrevin/yii2-fontawesome": "~3.5",
-        "kartik-v/yii2-widget-select2": "@dev",
+        "kartik-v/yii2-widget-select2": "@dev|v2.2.5",
         "kartik-v/yii2-widget-fileinput": "^1.1.1",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap5": "~2.0.2",
         "phpoffice/phpspreadsheet": "^1.23.0",
-        "kartik-v/yii2-widget-datetimepicker": "dev-master"
+        "kartik-v/yii2-widget-datetimepicker": "dev-master|v1.5.1"
     },
     "autoload": {
         "psr-4": {
